rabbitmq-service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: rabbitmq
#spec:
#  selector:
#    app: rabbitmq
#  ports:
#    - name: amqp
#      protocol: TCP
#      port: 5672
#      targetPort: 5672
#    - name: management
#      protocol: TCP
#      port: 15672
#      targetPort: 15672
#  type: LoadBalancer



apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
      nodePort: 30072  # Specify the desired NodePort for the AMQP port
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
      nodePort: 31672  # Specify the desired NodePort for the Management port
  type: NodePort
